# qualification

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  all_data.json  docker-compose.yaml  feedback.json  pyproject.toml  quote.json
appointment/: admin.py  apps.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
appointment/migrations/: 0001_initial.py  0002_alter_appointment_options_alter_appointment_comment_and_more.py  0003_appointment_medic_alter_appointment_owner_and_more.py  0004_remove_schedule_is_day_off_schedule_is_working_day.py  0005_eye_alter_schedule_is_working_day_resultofservice.py  0006_remove_resultofservice_service_appointment_result.py  0007_alter_eye_options.py  0008_alter_resultofservice_os.py
appointment/src/: celery_cmd.py  mailers.py  utils.py
blog/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_initial.py  0003_alter_blog_image.py
cart/: apps.py  cart.py  forms.py  urls.py  views.py
config/: settings.py  urls.py
fixtures/: all_data.json
optics/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
optics/migrations/: 0001_initial.py  0002_initial.py  0003_product_parameter.py  0004_brand_feedback_is_published_alter_feedback_phone_and_more.py  (+11 more)
templates/: basic.html  contacts.html  messages.html  page-panel-product.html  page-panel.html  quotation.html  shipping-info.html  streamer.html  testimonials.html
tunes/: admin.py  apps.py  context_processors.py  models.py  tests.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+36 files in other folders)
